--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "@heroui/use-theme": "2.1.10",
     "@react-aria/visually-hidden": "3.8.27",
     "@react-types/shared": "3.32.0",
-    "@tailwindcss/postcss": "4.1.11",
-    "@tailwindcss/vite": "4.1.11",
     "@types/react-router-dom": "^5.3.3",
     "clsx": "2.1.1",
     "cn": "^0.1.1",
@@ -37,13 +35,14 @@
     "react-dom": "18.3.1",
     "react-router-dom": "^6.23.0",
     "recharts": "^3.1.2",
-    "tailwind-variants": "3.1.0",
-    "tailwindcss": "4.1.11"
+    "tailwind-variants": "3.1.0"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.25.1",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@tailwindcss/vite": "^4.1.16",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -62,6 +61,7 @@
     "globals": "16.0.0",
     "postcss": "8.5.6",
     "prettier": "3.5.3",
+    "tailwindcss": "^4.1.16",
     "typescript": "5.6.3",
     "vite": "6.0.11",
     "vite-tsconfig-paths": "5.1.4"
